--- a/lightrag_webui/src/locales/en.json
+++ b/lightrag_webui/src/locales/en.json
@@ -11,6 +11,7 @@
     "knowledgeGraph": "Knowledge Graph",
     "retrieval": "Retrieval",
     "api": "API",
+    "prompts": "Prompts",
     "projectRepository": "Project Repository",
     "logout": "Logout",
     "themeToggle": {
@@ -93,7 +94,7 @@
       }
     },
     "documentManager": {
-      "title": "Document Mana",
+      "title": "Document Manager",
       "scanButton": "Scan",
       "scanTooltip": "Scan documents in input folder",
       "pipelineStatusButton": "Pipeline Status",
@@ -110,7 +111,8 @@
         "chunks": "Chunks",
         "created": "Created",
         "updated": "Updated",
-        "metadata": "Metadata"
+        "metadata": "Metadata",
+        "delete": "Delete"
       },
       "status": {
         "all": "All",
@@ -122,13 +124,18 @@
       "errors": {
         "loadFailed": "Failed to load documents\n{{error}}",
         "scanFailed": "Failed to scan documents\n{{error}}",
-        "scanProgressFailed": "Failed to get scan progress\n{{error}}"
+        "scanProgressFailed": "Failed to get scan progress\n{{error}}",
+        "deleteFailed": "Error occurred while deleting document: {{error}}"
       },
       "fileNameLabel": "File Name",
       "showButton": "Show",
       "hideButton": "Hide",
       "showFileNameTooltip": "Show file name",
-      "hideFileNameTooltip": "Hide file name"
+      "hideFileNameTooltip": "Hide file name",
+      "deleteConfirm": "Are you sure you want to delete this document? This action cannot be undone.",
+      "deleteSuccess": "Document has been successfully deleted.",
+      "deleteFailed": "Failed to delete document: {{error}}",
+      "deleteTooltip": "Delete this document"
     },
     "pipelineStatus": {
       "title": "Pipeline Status",
@@ -332,5 +339,35 @@
     "description": "Please enter your API key to access the service",
     "placeholder": "Enter your API key",
     "save": "Save"
+  },
+  "prompts": {
+    "title": "Prompts",
+    "description": "LLM Instruction Prompt Management",
+    "entityExtraction": {
+      "title": "Entity Extraction",
+      "description": "Instructions for extracting entities from text"
+    },
+    "entityExtractionExamples": {
+      "title": "Entity Extraction Examples",
+      "description": "Example data for entity extraction"
+    },
+    "entitySummarization": {
+      "title": "Entity Description Summarization",
+      "description": "Instructions for summarizing entity descriptions"
+    },
+    "entityContinueExtraction": {
+      "title": "Continue Entity Extraction",
+      "description": "Instructions for extracting additional missing entities"
+    },
+    "actions": {
+      "edit": "Edit",
+      "save": "Save",
+      "cancel": "Cancel"
+    },
+    "messages": {
+      "loadError": "Failed to load prompts",
+      "saveSuccess": "Prompt saved successfully",
+      "saveError": "Failed to save prompt"
+    }
   }
 }
